# esp-plate-vision

./: .gitignore  README.md  esp_example.py  main.py  pyproject.toml  uteis.py
app/: main.py  mqtt_client.py  uteis.py
app/core/: database.py
app/models/: client.py  device.py  parkingSpot.py  reservation.py  spot.py  user.py
app/routers/: client.py  device.py  plate.py  reservation.py  spot.py  user.py
app/schemas/: client.py  device.py  reservation.py  spot.py  user.py
app/service/: client.py  device.py  reservation.py  spot.py  user.py
routers/: plate.py
