[project]
name = "encontraplaca"
version = "0.1.0"
description = ""
authors = [
    {name = "douglas",email = "douglaspaz955@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "ultralytics (>=8.3.198,<9.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false